--- a/services-details.html
+++ b/services-details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Services Details - Append Bootstrap Template</title>
+  <title>Flurbana | Taller TuVerde</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -43,8 +43,8 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Append</h1><span>.</span>
+        <img src="assets/img/flurbana_marca.svg" alt="">
+        <!-- <h1 class="sitename">Append</h1><span>.</span> -->
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -91,8 +91,8 @@
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1>Services Details</h1>
-              <p class="mb-0">Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+              <h1>Taller TuVerde</h1>
+              <p class="mb-0">Aborda temas como la botánica básica, propagación de plantas, nutrición vegetal, y técnicas de cultivo en espacios reducidos.</p>
             </div>
           </div>
         </div>
@@ -101,11 +101,13 @@
         <div class="container">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Services Details</li>
+            <li><a href="index.html#features">Cursos</a></li>
+            <li class="current">Taller TuVerde</li>
           </ol>
         </div>
       </nav>
     </div><!-- End Page Title -->
+    
 
     <!-- Service Details Section -->
     <section id="service-details" class="service-details section">
@@ -115,6 +117,23 @@
         <div class="row gy-5">
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+
+            <div class="service-box">
+              <h4>Temas</h4>
+              <div class="download-catalog">
+                <a href="#">
+                  <i class="bi bi-caret-right-fill"></i><span>Introducción a la jardinería urbana</span></a>
+                <a href="#"><i class="bi bi-caret-right-fill"></i><span>Botánica básica</span></a>
+                <a href="#"><i class="bi bi-caret-right-fill"></i><span>Propagación de plantas</span></a>
+                <a href="#"><i class="bi bi-caret-right-fill"></i><span>Nutrición vegetal</span></a>
+                <a href="#"><i class="bi bi-caret-right-fill"></i><span>Técnicas de cultivo en espacios reducidos</span></a>
+                <a href="#"><i class="bi bi-caret-right-fill"></i><span>Control de plagas y enfermedades</span></a>
+                <a href="#"><i class="bi bi-caret-right-fill"></i><span>Diseño de huertos urbanos</span></a>
+                <a href="#"><i class="bi bi-caret-right-fill"></i><span>Sistemas de riego eficientes</span></a>
+                <a href="#"><i class="bi bi-caret-right-fill"></i><span>Compostaje y gestión de residuos orgánicos</span></a>
+                <!-- <a href="#"><i class="bi bi-caret-right-fill"></i><span></span></a> -->
+              </div>
+            </div>
 
             <div class="service-box">
               <h4>Serices List</h4>
@@ -127,13 +146,14 @@
               </div>
             </div><!-- End Services List -->
 
-            <div class="service-box">
+            <!-- <div class="service-box">
               <h4>Download Catalog</h4>
               <div class="download-catalog">
                 <a href="#"><i class="bi bi-filetype-pdf"></i><span>Catalog PDF</span></a>
                 <a href="#"><i class="bi bi-file-earmark-word"></i><span>Catalog DOC</span></a>
               </div>
-            </div><!-- End Services List -->
+            </div> -->
+            <!-- End Services List -->
 
             <div class="help-box d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-headset help-icon"></i>
@@ -145,7 +165,7 @@
           </div>
 
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
+            <img src="assets/img/cardcurso2.png" alt="" class="img-fluid services-img">
             <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
             <p>
               Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
