--- a/services-details.html
+++ b/services-details.html
@@ -87,16 +87,6 @@
 
     <!-- Page Title -->
     <div class="page-title" data-aos="fade">
-      <div class="heading">
-        <div class="container">
-          <div class="row d-flex justify-content-center text-center">
-            <div class="col-lg-8">
-              <h1>Taller TuVerde</h1>
-              <p class="mb-0">Aborda temas como la botánica básica, propagación de plantas, nutrición vegetal, y técnicas de cultivo en espacios reducidos.</p>
-            </div>
-          </div>
-        </div>
-      </div>
       <nav class="breadcrumbs">
         <div class="container">
           <ol>
@@ -106,8 +96,116 @@
           </ol>
         </div>
       </nav>
+      <div class="heading">
+        <div class="container">
+          <div class="row d-flex justify-content-left text-">
+            <div class="col-lg-5 offset-md-">
+              <!-- <div class="col-lg-7 offset-md-3"> -->
+              <h5> Descubre el placer de la Jardinería Urbana</h5>
+              <h1>Taller TuVerde</h1>
+              <p class=""><span>Modalidad presencial</span>Aprendé sobre botánica básica, propagación de plantas, nutrición vegetal y técnicas de cultivo en espacios reducidos. Transforma tu hogar en un oasis verde y sostenible.</p>
+              <a class="btn-inscripcion" href="#formulario">Quiero inscribirme</a>
+            </div>
+            <!-- <div class="img-taller col-lg-1 offset-md-">
+              <img src="/assets/img/cardcurso.jpg" alt="">
+            </div> -->
+          </div>
+        </div>
+      </div>
+      <!-- <nav class="breadcrumbs">
+        <div class="container">
+          <ol>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#features">Cursos</a></li>
+            <li class="current">Taller TuVerde</li>
+          </ol>
+        </div>
+      </nav> -->
     </div><!-- End Page Title -->
+
+    <section id="clients" class="clients section">
+
+      <div class="container aos-init aos-animate" data-aos="fade-up">
+
+        <div class="row gy-4">
+
+          <div class="col-xl-2 col-md-3 col-6 client-logo">
+            <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
+          </div><!-- End Client Item -->
+
+          <div class="col-xl-2 col-md-3 col-6 client-logo">
+            <img src="assets/img/clients/client-2.png" class="img-fluid" alt="">
+          </div><!-- End Client Item -->
+
+          <div class="col-xl-2 col-md-3 col-6 client-logo">
+            <img src="assets/img/clients/client-3.png" class="img-fluid" alt="">
+          </div><!-- End Client Item -->
+
+          <div class="col-xl-2 col-md-3 col-6 client-logo">
+            <img src="assets/img/clients/client-4.png" class="img-fluid" alt="">
+          </div><!-- End Client Item -->
+
+          <div class="col-xl-2 col-md-3 col-6 client-logo">
+            <img src="assets/img/clients/client-5.png" class="img-fluid" alt="">
+          </div><!-- End Client Item -->
+
+          <div class="col-xl-2 col-md-3 col-6 client-logo">
+          </section>
     
+    <section id="about" class="about section">
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <div class="row align-items-xl-center gy-5">
+
+          <div class="col-xl-5 content">
+            <h3>About Us</h3>
+            <h2>Ducimus rerum libero reprehenderit cumque</h2>
+            <p>Ipsa sint sit. Quis ducimus tempore dolores impedit et dolor cumque alias maxime. Enim reiciendis minus et rerum hic non. Dicta quas cum quia maiores iure. Quidem nulla qui assumenda incidunt voluptatem tempora deleniti soluta.</p>
+            <a href="#" class="read-more"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
+          </div>
+
+          <div class="col-xl-7">
+            <div class="row gy-4 icon-boxes">
+
+              <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
+                <div class="icon-box">
+                  <i class="bi bi-buildings"></i>
+                  <h3>Eius provident</h3>
+                  <p>Magni repellendus vel ullam hic officia accusantium ipsa dolor omnis dolor voluptatem</p>
+                </div>
+              </div> <!-- End Icon Box -->
+
+              <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
+                <div class="icon-box">
+                  <i class="bi bi-clipboard-pulse"></i>
+                  <h3>Rerum aperiam</h3>
+                  <p>Autem saepe animi et aut aspernatur culpa facere. Rerum saepe rerum voluptates quia</p>
+                </div>
+              </div> <!-- End Icon Box -->
+
+              <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
+                <div class="icon-box">
+                  <i class="bi bi-command"></i>
+                  <h3>Veniam omnis</h3>
+                  <p>Omnis perferendis molestias culpa sed. Recusandae quas possimus. Quod consequatur corrupti</p>
+                </div>
+              </div> <!-- End Icon Box -->
+
+              <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
+                <div class="icon-box">
+                  <i class="bi bi-graph-up-arrow"></i>
+                  <h3>Delares sapiente</h3>
+                  <p>Sint et dolor voluptas minus possimus nostrum. Reiciendis commodi eligendi omnis quideme lorenda</p>
+                </div>
+              </div> <!-- End Icon Box -->
+
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </section><!-- /About Section -->
 
     <!-- Service Details Section -->
     <section id="service-details" class="service-details section">
