--- a/services-details.html
+++ b/services-details.html
@@ -214,17 +214,17 @@
             </div>
 
           </div>
-
+          <!-- texto sobre el curso -->
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/cardcurso2.png" alt="" class="img-fluid services-img">
+            <!-- <img src="assets/img/cardcurso2.png" alt="" class="img-fluid services-img"> -->
             <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
             <p>
               Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Acceso a guuias y tutoriales avanzados</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Conexión con otros jardineros urbanos</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Oportunidades para conocer expertos y colaborar  </span></li>
             </ul>
             <p>
               Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
