--- a/services-details.html
+++ b/services-details.html
@@ -83,7 +83,7 @@
     </div>
   </header>
 
-  <main class="main">
+  <main class="main main-services">
 
     <!-- Page Title -->
     <div class="page-title" data-aos="fade">
@@ -108,7 +108,7 @@
               <a class="btn-inscripcion" href="#formulario">Quiero inscribirme</a>
             </div>
             <div class="img-taller col-lg-2 offset-md-1">
-              <img src="/assets/img/cardcurso.jpg" alt="">
+              <img src="assets/img/cardcurso.jpg" alt="">
             </div>
           </div>
         </div>
@@ -124,7 +124,7 @@
       </nav> -->
     </div><!-- End Page Title -->
 
-    <section id="clients" class="clients section">
+    <section id="clients" class="clients section beneficios">
 
       <div class="container aos-init aos-animate" data-aos="fade-up">
 
@@ -217,21 +217,21 @@
           <!-- texto sobre el curso -->
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
             <!-- <img src="assets/img/cardcurso2.png" alt="" class="img-fluid services-img"> -->
-            <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
+            <h3>Qué te ofrecemos en este curso?</h3>
             <p>
-              Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
+              Como aficionado a la jardineria, aprenderas sobre el mundo de la jardineria urbana. El curso se llevara a cabo 2 veces por semana, con un total de 6 clases más una presenteción del proyecto final y examen. Al terminar el curso recibiras un certificado y los siguientes beneficios:
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Acceso a guuias y tutoriales avanzados</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Acceso a guias y tutoriales avanzados</span></li>
               <li><i class="bi bi-check-circle"></i> <span>Conexión con otros jardineros urbanos</span></li>
               <li><i class="bi bi-check-circle"></i> <span>Oportunidades para conocer expertos y colaborar  </span></li>
             </ul>
-            <p>
-              Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
-            </p>
-            <p>
+            <!-- <p>
+              Estos beneficios hacen del curso una inversión valiosa para cualquier persona interesada en la jardinería urbana.
+            </p> -->
+            <!-- <p>
               Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
-            </p>
+            </p> -->
           </div>
 
         </div>
