--- a/services-details.html
+++ b/services-details.html
@@ -52,7 +52,7 @@
           <!-- <li><a href="index.html#hero" class="">Home</a></li> -->
           <li><a href="index.html#hero" class="">Home</a></li>
           <li><a href="index.html#about">Nosotros</a></li>
-          <li><a href="index.html#services">Talleres</a></li>
+          <li><a href="index.html#services">cursos</a></li>
           <!-- <li><a href="index.html#team">Team</a></li> -->
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -72,7 +72,7 @@
               <li><a href="#">Dropdown 4</a></li> -->
             <!-- </ul>
           </li>  -->
-          <li><a href="index.html#contact">Contact</a></li>
+          <li><a href="index.html#contact">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -381,7 +381,6 @@
             <!-- <span class="sitename">Append</span> -->
             <img src="assets/img/flurbana_marca.svg" alt="">
           </a>
-          <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
           <div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
@@ -391,13 +390,12 @@
         </div>
 
         <div class="col-lg-2 col-6 footer-links">
-          <h4>Useful Links</h4>
+          <h4>Links</h4>
           <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
+            <li><a href="#">Nosotros</a></li>
+            <li><a href="#">Cursos</a></li>
+            <li><a href="#">Contacto</a></li>
           </ul>
         </div>
 
